--- a/receiptx.html
+++ b/receiptx.html
@@ -219,7 +219,8 @@
 
             <h3>Problem statement:</h3>
 
-            <p>something here</p>
+            <p>College students living on campus learn how care for themselves but struggle to be financially responsible because they have little
+                visibility over their monthly expenses.</p>
         </div>
     </div>
 
@@ -228,12 +229,16 @@
         <div class="container">
             <div class="vision">
                 <h1>The product vision</h1>
-                <p>what does our project highlight?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                    odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                    at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                    consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                <p id="extra-para">For our project, we wanted to focus on 3 key areas:</p>
+
+                <ul>
+                    <li><b>Streamline spending.</b> We want to provide individuals a visualization of their monthly expenses, allowing them to 
+                        track spending habits.</li>
+                    <li><b>Financial goals.</b> We want to help people become financially responsible by providing them with the ability to set
+                        monthly spending goals.</li>
+                    <li><b>Receipt management.</b> We want to give people a single storage location for their receipts, making it easier to find
+                        a specific receipt.</li>
+                </ul>
 
                 <iframe id="concept-demo" src="https://www.youtube.com/embed/oj-bELa4va4" frameborder="0" allow="accelerometer; 
                     autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
