--- a/receiptx.html
+++ b/receiptx.html
@@ -342,12 +342,7 @@
         <div class="container">
             <div class="mvp">
                 <h1>Defining the MVP</h1>
-                <p>how did we come up with how project should look like, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                    odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                    at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                    consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                <p>My team and I had workshop and sketching sessions to map out the user flow to determine our MVP.</p>
             
 
                 <!-- IMAGES  -->
