--- a/hammer.html
+++ b/hammer.html
@@ -85,14 +85,10 @@
                 <div class="no-pad-col">
                     <div class="summary">
                         <p id="light-head">Overview</p>
-                        <p id="extra-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
-                            
-                        <p>ReceiptX is a mobile application that helps self-motivated people streamline their monthly expenses by identifying and categorizing their spending habits.</p>
+                        <p id="extra-para">This weapon is an ancient “Rhino-Hammer” from W’Kabi’s tribe that has been modified to allow the head to release and extend the length of the weapon. 
+                            The weapon can also gather and charge kinetic energy by swinging it around and then transferring the stored potential energy in three ways: 
+                            “Rhino Smash – direct hit release, “Rhino Blast” – concentrated laser-shot release of energy through the horn of the hammer, and “Rhino Quake:” – slamming the rhino 
+                            horn into the ground releases energy into the surrounding environment.</p>
 
                         <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
                     </div>
@@ -121,12 +117,7 @@
                 <!-- background  -->
                 <div class="background-info">
                     <h1>Background</h1>
-                    <p>What is ReceiptX about, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    <p>Black Panther was one of the most culturally significant movies for African Americans in recent history by involving the African culture in a mainstream fashion.</p>
                 </div>
                 
                 <!-- accomplishment  -->
