--- a/receiptx.html
+++ b/receiptx.html
@@ -123,7 +123,7 @@
                 <!-- accomplishment  -->
                 <div class="achievements">
                     <h1>ReceiptX received an A+ grade.</h1>
-                    <p>My instructors gave us full freedom to choose our team members and come up with an idea for a capstone project. I was in charge of
+                    <p>My instructors gave us full freedom to choose our team members and come up with an idea for a capstone project. I was in charge of the
                         UX and Development strategies for the team. It was a pleasure to go through this journey with my team members that allowed me to
                         grow tremendously. Some of our key achievements listed below:
                     </p>
