--- a/hammer.html
+++ b/hammer.html
@@ -245,7 +245,14 @@
         <div class="container">
             <div class="mvp">
                 <h1>Defining the MVP</h1>
-                <p>After learning more about what people want in the Black Panther sequel, each team member came up with their own idea to share.</p>
+                <p id="extra-para">After learning more about what people want in the Black Panther sequel, each team member came up with their own idea to share.</p>
+
+                <p>Our design ideas were influenced by the following:</p>
+                <ul class="bullet-list">
+                    <li><b>Incorporate the culture.</b> People loved the representation in the film.</li>
+                    <li><b>Consider the animals.</b> Animals are visually appealing to people.</li>
+                    <li><b>Weapon other than a spear.</b> People have seen a lot of spears already in Black Panther.</li>
+                </ul>
 
                 <!-- IMAGES  -->
                 <div class="topic-imgs">
