--- a/hammer.html
+++ b/hammer.html
@@ -326,7 +326,6 @@
                     <figcaption>Rhino Blast - potential energy streamed through horn of rhino hammer</figcaption>
                 </figure>
         
-
                 <figure id="design-fig">
                     <img src="https://i.imgur.com/pwW0icS.png" alt="Rhino Quake" style="width: 100%;">
                     <figcaption>Rhino Quake - potential energy released through the ground</figcaption>
@@ -351,19 +350,19 @@
     <div class="container">
         <div class="takeaway">
             <h1>Results and Takeaways</h1>
-            <p id="extra-para">What happened at the end?, What did I learn, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+            <p id="extra-para">Working on Rhino Hammer definitely had a learning curve I had to overcome. Interacting with people was something I did not enjoy,
+                but it was good experience to learn that I can create innovative products when working with others.
+            </p>
 
             <p>Some key take aways from this project are that:</p>
             
             <ul class="bullet-list">
-                <li><b>Possibilities are endless.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                <li><b>Anything can be considered technology.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                <li><b>Connect with the target group.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li><b>Possibilities are endless.</b> Working with a team allows you to build better designs than the ones you do yourself. The more brains you put together,
+                    the better ideas you get.</li>
+                <li><b>Anything can be considered technology.</b> UX Design is not always bound to just computers. Anything people use
+                    and interact with can be considered technology.</li>
+                <li><b>Connect with the target group.</b> You can read things online to learn more about issues people are dealing with, but you also interacting
+                    with the target group allows you experience their problems first hand.</li>
             </ul>
         </div>
     </div>
