--- a/receiptx.html
+++ b/receiptx.html
@@ -534,7 +534,7 @@
         <div class="takeaway">
             <h1>Results and Takeaways</h1>
             <p id="extra-para">Working on ReceiptX was quite an eye-opening experience as it allowed me to put the skills I had developed during 
-                my undergraduate journey to the test. The project also taught me a lot abut knowing where to focus my energy and efforts.
+                my undergraduate journey to the test. The project also taught me a lot about knowing where to focus my energy and efforts.
             </p>
 
             <p>Some key take aways from this project are that:</p>
@@ -544,6 +544,7 @@
                 <li><b>Plans can alter.</b> Although having a plan is important for any project, they can change accordingly. It is important to be able to adapt to change.</li>
                 <li><b>Communication is key.</b> Better ideas come with discussion. Talking with teammates also help each other be on the same page during a project.</li>
                 <li><b>Understand the roles of each team member.</b> No role is too important in a project. Learning about what each team member does allows for better conversations because you can talk in terms they can understand.</li>
+                <li><b>Avoid leading questions.</b> Having leading questions can have an effect on the direction of where your project is going.</li>
             </ul>
         </div>
     </div>
