--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                 <h3>Let's connect</h3>
                 <p>Feel free to contact me with any questions!</p>
                 <a href="https://www.linkedin.com/in/jeffrey-tran-6547b212b/" target="_blank"><i id="footer-icon" class="fab fa-linkedin fa-3x"></i></a>
+                <a href="https://github.com/xjeffey?tab=repositories" target="_blank"><i id="footer-icon" class="fab fab fa-github fa-3x"></i></a>
                 <a href="mailto:tranjeff@live.com"><i id="footer-icon" class="far fa-envelope fa-3x"></i></a>
             </section>
         </div>
